--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,13 +1,11 @@
-<md-toolbar layout="row" layout-align="center center">
+<div class="nav-bar">
+  <div layout="row" layout-align="" class="nav-bar-contents">
+    <div class="nav-bar-logo">
+      <img src="assets/images/logo.png" class="nav-bar-logo-img">
+    </div>
+    <div class="nav-bar-chat">
+      <img src="assets/images/chat.png" class="nav-bar-chat-img">
+    </div>
+  </div>
 
-  <md-button href="https://github.com/Swiip/generator-gulp-angular">Gulp Angular</md-button>
-
-  <section flex layout="row" layout-align="left center">
-    <md-button href="#" class="md-raised">Home</md-button>
-    <md-button href="#" class="md-raised">About</md-button>
-    <md-button href="#" class="md-raised">Contact</md-button>
-  </section>
-
-  <md-button class="acme-navbar-text">Application was created {{ vm.relativeDate }}.</md-button>
-
-</md-toolbar>
+</div>
