Remove chat icon

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,11 +1,5 @@
 <div class="nav-bar">
-  <div layout="row" layout-align="" class="nav-bar-contents">
-    <div class="nav-bar-logo">
-      <img src="assets/images/logo.png" class="nav-bar-logo-img">
-    </div>
-    <div class="nav-bar-chat">
-      <img src="assets/images/chat.png" class="nav-bar-chat-img">
-    </div>
+  <div class="nav-bar-logo" layout="row" layout-align="center center">
+    <img src="assets/images/logo.png" class="nav-bar-logo-img">
   </div>
-
 </div>
