Create /chat-room/:id page and move contents of main to room

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,9 +1,4 @@
-<navbar style="position: fixed; top: 0; width: 100%;">
-</navbar>
-<div layout-fill style="margin-top: 56px;">
-  {{main.msg}}
-  <section style="position: fixed; bottom: 0; width: 100%;">
-    <input type="text" style="width: 100%">
-  </section>
+<div layout-fill>
+
 </div>
 
