--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -8,7 +8,7 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:400,700,700italic,400italic);
 
 @font-face {
-  font-family: 'Material Icons';
+  font-family: 'Hiragino Kaku Gothic Pro', 'ヒラギノ角ゴ Pro W3', Meiryo, メイリオ, Osaka, 'MS PGothic', arial, helvetica, sans-serif;
   font-style: normal;
   font-weight: 400;
   src: url(../../../spajam-f/bower_components/material-design-iconfont/iconfont/MaterialIcons-Regular.eot); /* For IE6-8 */
@@ -45,7 +45,7 @@
 }
 
 html {
-  font-family: 'Roboto Slab', serif;
+  font-family: 'Hiragino Kaku Gothic Pro', 'ヒラギノ角ゴ Pro W3', Meiryo, メイリオ, Osaka, 'MS PGothic', arial, helvetica, sans-serif;
 }
 
 [layout=row] {
