--- a/src/app/pages/room/room.scss
+++ b/src/app/pages/room/room.scss
@@ -1,3 +1,7 @@
+.chat-room {
+  padding-bottom: 50px;
+
+}
 .chat-item {
   padding-top: 10px;
   padding-left: 12px;
@@ -20,4 +24,45 @@
 
 .chat-time-message {
   font-size: 14px;
+}
+
+.chat-send-message {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  background-color: #f2f2f2;
+  border-top: 1px solid #d9d7d6;
+  display: flex;
+  align-items: center;
+}
+
+.chat-user-icon {
+  padding-left: 12px;
+}
+.chat-input-message {
+  padding-left: 10px;
+  input {
+    height: 30px;
+    border: none;
+    border-radius: 2px;
+
+  }
+}
+
+.chat-submit {
+  height: 30px;
+  padding-left: 6px;
+  .chat-submit-btn {
+    margin: 0;
+    padding: 0;
+    min-width: 50px;
+    min-height: 30px;
+    height: 30px;
+    line-height: 30px;
+    background-color: #29abe2;
+    color: white;
+    border: none;
+    border-radius: 4px;
+  }
 }
