--- a/src/app/pages/room/room.scss
+++ b/src/app/pages/room/room.scss
@@ -1,11 +1,47 @@
+$next-stations-info-height: 50px;
+.next-stations-info {
+  position: fixed;
+  top: 0;
+  height: $next-stations-info-height;
+  width: 100%;
+  background-color: #f2f2f2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-top: 1px solid #d9d7d6;
+  border-bottom: 1px solid #d9d7d6;
+  .train-img {
+    width: 50px;
+  }
+  .arrow-img {
+    padding-left: 6px;
+    width: 14px;
+  }
+  .next-stations-label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 30px;
+    width: 80px;
+    background-color: white;
+    border: none;
+    border-radius: 4px;
+    margin-left: 6px;
+    font-weight: 800;
+  }
+}
+
 .chat-room {
+  padding-top: $next-stations-info-height;
   padding-bottom: 50px;
 
 }
+
 .chat-item {
   padding-top: 10px;
   padding-left: 12px;
 }
+
 .chat-item-icon-container {
   display: flex;
 }
@@ -14,6 +50,7 @@
   padding-top: 8px;
   padding-left: 10px;
 }
+
 .chat-animal-icon-img {
   width: 44px;
 }
@@ -40,6 +77,7 @@
 .chat-user-icon {
   padding-left: 12px;
 }
+
 .chat-input-message {
   padding-left: 10px;
   input {
